@@ -114,7 +114,7 @@ command:
 
 Required settings:
 
-* `JANKY_BASE_URL`: The application URL **without** a trailing slash. Example:
+* `JANKY_BASE_URL`: The application URL **with** a trailing slash. Example:
   `http://mf-doom-42.heroku.com/`.
 * `JANKY_BUILDER_DEFAULT`: The Jenkins server URL **with** a trailing slash.
    Example: `http://jenkins.example.com/`. For basic auth, include the
